# automagicsynth

./: .gitignore  README.md  automagicsynth.cabal  build.sh  default.nix  pkgs.nix  play  play.sh  repl.sh  run.sh  shell.nix  showcqt
scripts/: play.sh
src/: Composition.hs  CompositionDraft.hs  Constraint.hs  Draft.hs  Envelope.hs  Filters.hs  Fixed.hs  FixedDraft.hs  FixedFunctions.hs  Hash.hs  Interpolable.hs  Main.hs  Noise.hs  PCM.hs  Pair.hs  Play.hs  Player.hs  Raw.hs  Render.hs  Renderer.hs  Rhythm.hs  Sample.hs  Script.hs  Shared.hs  Tone.hs  Util.hs  Wavetable.hs
src/Data/Fixed/: Binary.hs
