name: automagicsynth
version: 0.1.0.0
synopsis: Generative music software with a custom synthesizer.
homepage: https://github.com/timjrd/automagicsynth
license: GPL-3
license-file: LICENSE
author: Timothée Jourde
maintainer: timjrd@netc.fr
category: Sound
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

executable automagicsynth
  main-is: Main.hs
  ghc-options:
    -O2
    
  other-modules:
    Composition
    Constraint
    Envelope
    Noise
    Hash
    PCM
    Script
    Tone
    Util
    Sample
    Data.Fixed.Binary
    
  build-depends:
    base, array, containers, bytestring, random,
    MonadRandom, random-shuffle,
    reinterpret-cast,
    gnuplot

  hs-source-dirs: src
  default-language: Haskell2010
